# lambda-rust-sam-example

./: .gitignore  Dockerfile  README.md  build.ps1  event.json  rustbuild.sh  template.yaml
lambda-rust-app/: Cargo.toml
