[package]
name = "lambda-rust-example"
version = "0.1.0"
authors = ["Harry Wilkinson <harry.wilkinson@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "^0.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "^0.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"